[gd_scene load_steps=36 format=2]

[ext_resource path="res://Scripts/SorcerersGarden.gd" type="Script" id=1]
[ext_resource path="res://UI/EscapeMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ComponentScenes/TreeOfLife.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Art/Tiles/Grass.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Sound/magicZap.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/diggingCrunch.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/Muzak.ogg" type="AudioStream" id=7]
[ext_resource path="res://UI/DialoguePopup.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Sorcerer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/BadGuys/Adventurer.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Sound/coconutHorses.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/HighTextTheme.tres" type="Theme" id=12]
[ext_resource path="res://icon.png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/BigRockButton.svg" type="Texture" id=14]
[ext_resource path="res://Assets/UI/SnapDragonButton.svg" type="Texture" id=15]
[ext_resource path="res://Assets/UI/BigRockButtonPressed.svg" type="Texture" id=16]
[ext_resource path="res://Assets/UI/SnapDragonButtonPressed.svg" type="Texture" id=17]
[ext_resource path="res://Assets/UI/SkeletonButtonPressed.svg" type="Texture" id=18]
[ext_resource path="res://Assets/UI/SkeletonButton.svg" type="Texture" id=19]

[sub_resource type="NavigationPolygon" id=16]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=17]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=18]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=19]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=20]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=21]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=22]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=23]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=24]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=25]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=26]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=27]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=28]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=29]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=30]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=15]
0/name = "Grass.svg 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 16 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Grass.svg 1"
1/texture = ExtResource( 4 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 17 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Grass.svg 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 23 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Grass.svg 3"
3/texture = ExtResource( 4 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 64, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/navigation = SubResource( 24 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Grass.svg 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 64, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/navigation = SubResource( 25 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Grass.svg 5"
5/texture = ExtResource( 4 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 64, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/navigation = SubResource( 26 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Grass.svg 6"
6/texture = ExtResource( 4 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 128, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/navigation = SubResource( 27 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Grass.svg 7"
7/texture = ExtResource( 4 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 64, 128, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/navigation = SubResource( 28 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Grass.svg 8"
8/texture = ExtResource( 4 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 128, 128, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/navigation = SubResource( 29 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "Grass.svg 9"
9/texture = ExtResource( 4 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 192, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/navigation = SubResource( 30 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "Grass.svg 10"
10/texture = ExtResource( 4 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 64, 192, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/navigation = SubResource( 18 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0
11/name = "Grass.svg 11"
11/texture = ExtResource( 4 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 128, 192, 64, 64 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/navigation = SubResource( 19 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape_one_way = false
11/shape_one_way_margin = 0.0
11/shapes = [  ]
11/z_index = 0
12/name = "Grass.svg 12"
12/texture = ExtResource( 4 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 0, 256, 64, 64 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/navigation = SubResource( 20 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape_one_way = false
12/shape_one_way_margin = 0.0
12/shapes = [  ]
12/z_index = 0
13/name = "Grass.svg 13"
13/texture = ExtResource( 4 )
13/tex_offset = Vector2( 0, 0 )
13/modulate = Color( 1, 1, 1, 1 )
13/region = Rect2( 64, 256, 64, 64 )
13/tile_mode = 0
13/occluder_offset = Vector2( 0, 0 )
13/navigation_offset = Vector2( 0, 0 )
13/navigation = SubResource( 21 )
13/shape_offset = Vector2( 0, 0 )
13/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
13/shape_one_way = false
13/shape_one_way_margin = 0.0
13/shapes = [  ]
13/z_index = 0
14/name = "Grass.svg 14"
14/texture = ExtResource( 4 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 128, 256, 64, 64 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/navigation = SubResource( 22 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0

[node name="SorcerersGarden" type="Node"]
script = ExtResource( 1 )

[node name="Garden" type="Node2D" parent="."]

[node name="Navigation2D" type="Navigation2D" parent="Garden"]

[node name="TileMap" type="TileMap" parent="Garden/Navigation2D"]
tile_set = SubResource( 15 )
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 1, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 1, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 1, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 0, 0, 2, 4, 0, 3, 0, 0, 4, 13, 0, 5, 12, 0, 6, 0, 0, 7, 2, 0, 8, 0, 0, 9, 10, 0, 10, 0, 0, 11, 4, 0, 12, 10, 0, 13, 0, 0, 14, 12, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 10, 0, 65538, 1, 0, 65539, 4, 0, 65540, 11, 0, 65541, 0, 0, 65542, 9, 0, 65543, 0, 0, 65544, 0, 0, 65545, 9, 0, 65546, 0, 0, 65547, 0, 0, 65548, 7, 0, 65549, 13, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 196606, 0, 0, 196607, 10, 0, 131072, 0, 0, 131073, 0, 0, 131074, 13, 0, 131075, 6, 0, 131076, 0, 0, 131077, 1, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 12, 0, 131084, 0, 0, 131085, 1, 0, 131086, 0, 0, 131087, 9, 0, 131088, 0, 0, 131089, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 10, 0, 196609, 1, 0, 196610, 0, 0, 196611, 10, 0, 196612, 14, 0, 196613, 0, 0, 196614, 4, 0, 196615, 13, 0, 196616, 0, 0, 196617, 10, 0, 196618, 1, 0, 196619, 0, 0, 196620, 2, 0, 196621, 12, 0, 196622, 11, 0, 196623, 4, 0, 196624, 0, 0, 196625, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 3, 0, 262146, 4, 0, 262147, 12, 0, 262148, 0, 0, 262149, 4, 0, 262150, 1, 0, 262151, 0, 0, 262152, 13, 0, 262153, 8, 0, 262154, 6, 0, 262155, 10, 0, 262156, 0, 0, 262157, 3, 0, 262158, 11, 0, 262159, 0, 0, 262160, 1, 0, 262161, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 10, 0, 327681, 0, 0, 327682, 10, 0, 327683, 0, 0, 327684, 10, 0, 327685, 0, 0, 327686, 5, 0, 327687, 10, 0, 327688, 0, 0, 327689, 14, 0, 327690, 14, 0, 327691, 12, 0, 327692, 4, 0, 327693, 0, 0, 327694, 1, 0, 327695, 8, 0, 327696, 0, 0, 327697, 0, 0, 458750, 0, 0, 458751, 6, 0, 393216, 1, 0, 393217, 0, 0, 393218, 0, 0, 393219, 4, 0, 393220, 0, 0, 393221, 7, 0, 393222, 1, 0, 393223, 0, 0, 393224, 0, 0, 393225, 12, 0, 393226, 0, 0, 393227, 0, 0, 393228, 1, 0, 393229, 5, 0, 393230, 14, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 3, 0, 458753, 0, 0, 458754, 12, 0, 458755, 13, 0, 458756, 0, 0, 458757, 0, 0, 458758, 1, 0, 458759, 7, 0, 458760, 10, 0, 458761, 0, 0, 458762, 2, 0, 458763, 0, 0, 458764, 8, 0, 458765, 0, 0, 458766, 2, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 6, 0, 589828, 0, 0, 589829, 0, 0, 589830, 6, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 4, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 4, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0 )

[node name="Landmarks" type="Node2D" parent="Garden"]

[node name="SorcererArrivalPoint" type="Position2D" parent="Garden/Landmarks"]
position = Vector2( 672, 96 )

[node name="Sorcerer" parent="Garden/Landmarks" instance=ExtResource( 9 )]
position = Vector2( 960, 96 )
deathParticle = null

[node name="FirstAdventurer" parent="Garden/Landmarks" instance=ExtResource( 10 )]
position = Vector2( 520, 672 )
collision_mask = 14
deathParticle = null

[node name="ScoutingPosition" type="Position2D" parent="Garden/Landmarks"]
position = Vector2( 528, 384 )

[node name="TreeOfLife" parent="Garden/Landmarks" instance=ExtResource( 3 )]
position = Vector2( 504, 128 )

[node name="Obstacles" type="Node2D" parent="Garden"]

[node name="Plants" type="Node2D" parent="Garden"]

[node name="BadGuys" type="Node2D" parent="."]

[node name="BadGuySpawns" type="Node2D" parent="BadGuys"]

[node name="Spawn1" type="Position2D" parent="BadGuys/BadGuySpawns"]
position = Vector2( 41.9887, 443.214 )

[node name="Spawn2" type="Position2D" parent="BadGuys/BadGuySpawns"]
position = Vector2( 170.287, 559.849 )

[node name="Spawn3" type="Position2D" parent="BadGuys/BadGuySpawns"]
position = Vector2( 382.564, 565.681 )

[node name="Spawn4" type="Position2D" parent="BadGuys/BadGuySpawns"]
position = Vector2( 618.167, 559.849 )

[node name="Spawn5" type="Position2D" parent="BadGuys/BadGuySpawns"]
position = Vector2( 819.946, 554.018 )

[node name="Spawn6" type="Position2D" parent="BadGuys/BadGuySpawns"]
position = Vector2( 989.067, 446.713 )

[node name="InitialTimer" type="Timer" parent="BadGuys"]

[node name="SpawnTimer" type="Timer" parent="BadGuys"]

[node name="RetreatPoint" type="Position2D" parent="BadGuys"]
position = Vector2( 504, 648 )

[node name="ManaTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="SeedStockTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="Sound" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Sound"]
pause_mode = 2
stream = ExtResource( 7 )
volume_db = -35.0
autoplay = true

[node name="ArrivingEnemySFX" type="AudioStreamPlayer2D" parent="Sound"]
position = Vector2( 512, 616 )
stream = ExtResource( 11 )
volume_db = 1.01

[node name="MagicSFX" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 5 )

[node name="DiggingSFX" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 6 )

[node name="GardeningBag" type="Control" parent="."]
anchor_top = 0.849
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -0.599976
rect_min_size = Vector2( 760, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="GardeningBag"]
margin_right = 1024.0
margin_bottom = 99.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BigContainer" type="HBoxContainer" parent="GardeningBag"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = 5.0
margin_bottom = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="GardeningBag/BigContainer"]
margin_right = 340.0
margin_bottom = 90.0
rect_min_size = Vector2( 340, 90 )

[node name="SeedContainer" type="HBoxContainer" parent="GardeningBag/BigContainer/NinePatchRect"]
margin_left = 5.0
margin_right = 314.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
margin_right = 37.0
margin_bottom = 64.0
alignment = 1

[node name="SeedLabel" type="Label" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 37.0
margin_bottom = 30.0
theme = ExtResource( 12 )
text = "Seeds:"

[node name="SeedCount" type="Label" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 37.0
margin_bottom = 52.0
theme = ExtResource( 12 )
text = "5"
align = 1

[node name="PlantButton" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
margin_left = 41.0
margin_right = 105.0
margin_bottom = 64.0
hint_tooltip = "Snap Dragons will eat approaching enemies in a limited sphere."
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 17 )

[node name="PlantButton2" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
visible = false
margin_left = 109.0
margin_right = 173.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )

[node name="PlantButton3" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
visible = false
margin_left = 177.0
margin_right = 241.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )

[node name="PlantButton4" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
visible = false
margin_left = 245.0
margin_right = 309.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )

[node name="PlantButton5" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
visible = false
margin_left = 313.0
margin_right = 377.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )

[node name="PlantButton6" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect/SeedContainer"]
visible = false
margin_left = 313.0
margin_right = 377.0
margin_bottom = 64.0
texture_normal = ExtResource( 13 )

[node name="NinePatchRect2" type="NinePatchRect" parent="GardeningBag/BigContainer"]
margin_left = 344.0
margin_right = 684.0
margin_bottom = 90.0
rect_min_size = Vector2( 340, 90 )

[node name="SpellBook" type="HBoxContainer" parent="GardeningBag/BigContainer/NinePatchRect2"]
margin_left = -12.0
margin_right = -12.0
margin_bottom = 90.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GardeningBag/BigContainer/NinePatchRect2/SpellBook"]
margin_right = 35.0
margin_bottom = 90.0
alignment = 1

[node name="ManaLabel" type="Label" parent="GardeningBag/BigContainer/NinePatchRect2/SpellBook/VBoxContainer"]
margin_top = 25.0
margin_right = 35.0
margin_bottom = 43.0
theme = ExtResource( 12 )
text = "Magic:"

[node name="ManaCount" type="Label" parent="GardeningBag/BigContainer/NinePatchRect2/SpellBook/VBoxContainer"]
margin_top = 47.0
margin_right = 35.0
margin_bottom = 65.0
theme = ExtResource( 12 )
text = "10"
align = 1

[node name="ObstacleButton" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect2/SpellBook"]
margin_left = 39.0
margin_right = 103.0
margin_bottom = 90.0
hint_tooltip = "Magic Cost: 5 
Big Rocks will block advancement of enemies, forcing them to redirect around them."
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )

[node name="ObstacleButton2" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect2/SpellBook"]
visible = false
margin_left = 141.0
margin_right = 205.0
margin_bottom = 90.0
texture_normal = ExtResource( 13 )

[node name="ObstacleButton3" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect2/SpellBook"]
visible = false
margin_left = 175.0
margin_right = 239.0
margin_bottom = 90.0
texture_normal = ExtResource( 13 )

[node name="NinePatchRect3" type="NinePatchRect" parent="GardeningBag/BigContainer"]
margin_left = 688.0
margin_right = 1028.0
margin_bottom = 90.0
rect_min_size = Vector2( 340, 90 )

[node name="SummoningBook" type="HBoxContainer" parent="GardeningBag/BigContainer/NinePatchRect3"]
margin_left = -12.0
margin_right = -12.0
margin_bottom = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummonButton" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect3/SummoningBook"]
margin_right = 64.0
margin_bottom = 90.0
hint_tooltip = "Magic Cost: 5
Skeleton Warriors will wander the Garden and murder hapless adventurers."
texture_normal = ExtResource( 19 )
texture_pressed = ExtResource( 18 )

[node name="SummonButton2" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect3/SummoningBook"]
visible = false
margin_left = 68.0
margin_right = 132.0
margin_bottom = 90.0
texture_normal = ExtResource( 13 )

[node name="SummonButton3" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect3/SummoningBook"]
visible = false
margin_left = 136.0
margin_right = 200.0
margin_bottom = 90.0
texture_normal = ExtResource( 13 )

[node name="SummonButton4" type="TextureButton" parent="GardeningBag/BigContainer/NinePatchRect3/SummoningBook"]
visible = false
margin_left = 204.0
margin_right = 268.0
margin_bottom = 90.0
texture_normal = ExtResource( 13 )

[node name="DialoguePopup" parent="." instance=ExtResource( 8 )]
visible = false

[node name="EscapeMenu" parent="." instance=ExtResource( 2 )]
[connection signal="timeout" from="BadGuys/InitialTimer" to="." method="_on_InitialTimer_timeout"]
[connection signal="timeout" from="BadGuys/SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ManaTimer" to="." method="_on_ManaTimer_timeout"]
[connection signal="timeout" from="SeedStockTimer" to="." method="_on_SeedStockTimer_timeout"]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect/SeedContainer/PlantButton" to="." method="_on_PlantButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect/SeedContainer/PlantButton2" to="." method="_on_PlantButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect/SeedContainer/PlantButton3" to="." method="_on_PlantButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect/SeedContainer/PlantButton4" to="." method="_on_PlantButton_pressed" binds= [ 3 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect/SeedContainer/PlantButton5" to="." method="_on_PlantButton_pressed" binds= [ 4 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect/SeedContainer/PlantButton6" to="." method="_on_PlantButton_pressed" binds= [ 5 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect2/SpellBook/ObstacleButton" to="." method="_on_ObstacleButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect2/SpellBook/ObstacleButton2" to="." method="_on_ObstacleButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect2/SpellBook/ObstacleButton3" to="." method="_on_ObstacleButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect3/SummoningBook/SummonButton" to="." method="_on_SummonButton_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect3/SummoningBook/SummonButton2" to="." method="_on_SummonButton_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect3/SummoningBook/SummonButton3" to="." method="_on_SummonButton_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GardeningBag/BigContainer/NinePatchRect3/SummoningBook/SummonButton4" to="." method="_on_SummonButton_pressed" binds= [ 3 ]]
